--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -26,11 +26,17 @@
 	font-family: SuiGeneRisRg;
 }
 
+
+@font-face {
+	src: url('../fonts/Oswald-Regular.ttf');
+	font-family: Oswald-Regular;
+}
+
 .content_wrapper .content_left {
 	background-color: #000;
 	padding-left: 3%;
 	padding-top: 24px;
-	width: 31%;
+	width: 29%;
 }
 
 .content_wrapper .content_logo {
@@ -42,10 +48,7 @@
 	width: 100%;
 }
 
-.content_wrapper .content_bottom_row {
-	height: 100%;
-	padding-top: 26rem;
-}
+
 
 .content_wrapper .content_bottom_row .right {
 	position: absolute;
@@ -54,14 +57,25 @@
 	z-index: 1;
 }
 
-.content_wrapper .content_bottom_row ul {
+.content_wrapper .content_bottom_row .right .content_bank img {
+	width: 14.8vw;
+}
+
+.content_wrapper .content_bottom_row .left {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+
+.content_wrapper .content_bottom_row ul li {
 	list-style-type: none;
 }
 
 .content_wrapper .content_bottom_row ul a {
 	color: #fff;
 	font-family: SuiGeneRisRg;
-	font-size: 20px;
+	font-size: 1.05vw;
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
@@ -81,7 +95,7 @@
 }
 
 .content_wrapper .content_bottom_row ul a .big_number {
-	font-size: 86px;
+	font-size: 4.5vw;
 	line-height: 70px;
 	margin-right: 15px;
 }
@@ -100,8 +114,200 @@
 
 
 
-
-
 .content_wrapper .content_right {
+	width: 71%;
+	padding-left: 120px;
+	padding-right: 40px;
+	background-color: #F9F8FD;
+}
 
+.content_wrapper .content_right .rtitle_row {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-ms-align-items: flex-end;
+	align-items: flex-end;
+	justify-content: space-between;
+}
+
+.content_wrapper .content_right .rtitle_row .left {
+	width: 65%;
+}
+
+.content_wrapper .content_right .rtitle_row .right {
+	width: 35%;
+	text-align: right;
+}
+
+.content_wrapper .content_right .rtitle_row .right .price_item {
+	font-size: 4.6vw;
+	font-family: SuiGeneRisRg;
+	color: #000;
+	line-height: 1;
+}
+
+.content_wrapper .content_right .rtitle_row .right .price_dop {
+	color: #828687;
+	font-size: 1.75vw;
+	font-family: Oswald;
+	line-height: 1;
+	margin: 0;
+}
+
+.content_wrapper .content_right .rtitle_row .right .price_dop img {
+	width: 8%;
+}
+
+.content_wrapper .content_right .rtitle_row .ultimate_title {
+	font-family: Edo;
+	font-size: 7.7vw;
+	color: #E5282C;
+	line-height: 0.8;
+	text-align: center;
+}
+
+.content_wrapper .content_right .rtitle_row .ultimate_title span {
+	font-size: 69%;
+}
+
+.content_wrapper .content_right .rtitle_row .left p {
+	font-size: 2.1vw;
+	font-family: Oswald-Regular;
+	text-align: center;
+	color: #000;
+	margin-top: 25px;
+	font-weight: 600;
+	line-height: 1;
+}
+
+
+
+.content_wrapper .collection_row {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	margin-top: 62px;
+}
+
+.content_wrapper .collection_row .left {
+	width: 55%;
+}
+
+.content_wrapper .collection_row .right {
+	width: 45%;
+}
+
+.content_wrapper .collection_row .product_row {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+}
+
+.content_wrapper .collection_row .product_item { 
+	margin-right: 15px;
+}
+
+.content_wrapper .collection_row .product_item img {
+	width: 100%;
+}
+
+.content_wrapper .collection_row .product_descr {
+	font-family: Oswald;
+	font-weight: 500;
+	font-size: 1.35vw;
+	color: #707070;
+	margin-top: 25px;
+	text-align: center;
+}
+
+
+.content_wrapper .collection_row .upgrade_button {
+	display: block;
+	font-size: 3vw;
+	font-family: Edo;
+	color: #fff;
+	background-color: #000;
+	padding: 3% 10% 3% 7%;
+	position: relative;
+}
+
+.content_wrapper .collection_row .upgrade_button .plus {
+	font-family: Edosz;
+	color: #E5282C;
+	font-size: 13vw;
+	position: absolute;
+	right: -10;
+	top: 15px;
+	line-height: 0.5;
+}
+
+.content_wrapper .collection_row .right .save_text {
+	font-size: 1.2vw;
+	font-family: Oswald;
+	color: #000;
+}
+
+.content_wrapper .collection_row .right .skip_text {
+	color: #828687;
+	font-size: 1.70vw;
+	font-family: Oswald;
+	line-height: 1;
+	margin: 0;
+	display: inline-block;
+}
+
+.content_wrapper .collection_row .right .upbtn_row {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-ms-align-items: center;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 20px;
+}
+
+
+
+.content_wrapper .collection_row .right .upgrade_privacy {
+	font-family: BrandonGrotesque-Regular;
+	margin-top: 130px;
+	max-width: 370px;
+	margin-left: auto;
+	font-size: 12px;
+}
+
+.content_wrapper .collection_row .right .upgrade_privacy a {
+	color: #E5282C;
+}
+
+
+.bucket_partners {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-ms-align-items: center;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 90px;
+	padding-bottom: 100px;
+}
+
+.bucket_partners a {
+	-webkit-transition: 0.5s ease-out;
+	-o-transition: 0.5s ease-out;
+	transition: 0.5s ease-out;
+}
+
+.bucket_partners a:hover {
+	opacity: 0.5;
 }
