--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -256,6 +256,17 @@
 	background-color: #000;
 	padding: 3% 10% 3% 7%;
 	position: relative;
+	border: 4px solid transparent;
+	text-decoration: none;
+	-webkit-transition: 0.5s ease-out;
+	-o-transition: 0.5s ease-out;
+	transition: 0.5s ease-out;
+}
+
+.content_wrapper .collection_row .upgrade_button:hover {
+	background-color: #fff;
+	border: 4px solid #000;
+	color: #000;
 }
 
 .content_wrapper .collection_row .upgrade_button .plus {
@@ -281,6 +292,7 @@
 	line-height: 1;
 	margin: 0;
 	display: inline-block;
+	z-index: 1;
 }
 
 .content_wrapper .collection_row .right .upbtn_row {
@@ -577,4 +589,14 @@
 		display: block;
 	}
 
+}
+
+
+@media screen and (max-width: 400px) {
+	.content_wrapper .collection_row .left {
+		padding-left: 0;
+	}
+	.price_wrapper_mobile .price_item {
+		font-size: 42px;
+	}
 }
