--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -350,6 +350,11 @@
 	font-size: 20px;
 	font-family: Oswald;
 	color: #000;
+	display: inline-block;
+	max-width: 100px;
+	line-height: 1.3;
+	text-align: right;
+	vertical-align: bottom;
 }
 
 .upgrade_wrapper_mobile .skip_text {
